<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main -->
    <string name="app_name">MorphClock</string>

    <!-- Menus -->
    <string name="Info">Info</string>

    <!-- About -->
    <string name="copyright_doug_melton">Copyright © 2014, Doug Melton</string>
    <string name="twitter_link_dgmltn"><a href="http://www.twitter.com/dgmltn">@dgmltn</a></string>

    <string name="Daydream">Daydream</string>
    <string name="daydream_description">MorphClock can be set as your Daydream. Click here to configure your Daydream.</string>

    <string name="Open_Source">Open Source</string>
    <string name="open_source_intro">This app is built upon great open source software.</string>
    <string name="mit_license"><a href="http://opensource.org/licenses/MIT">MIT License</a></string>
    <string name="apache_license"><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></string>

    <string name="android_number_morphing">android-number-morphing</string>
    <string name="android_number_morphing_url">https://github.com/bydavy/android-number-morphing</string>
    <string name="copyright_davyleggieri">Copyright © 2014, Davy Leggieri</string>
    <string name="twitter_link_davyleggieri"><a href="http://www.twitter.com/davyleggieri">@davyleggieri</a></string>
    <string name="gplus_link_davyleggieri"><a href="http://google.com/+DavyLeggieri">+DavyLeggieri</a></string>

    <string name="solarpositioning">solarpositioning</string>
    <string name="solarpositioning_url">https://github.com/KlausBrunner/solarpositioning</string>
    <string name="copyright_Klaus_Brunner">Copyright © 2013, Klaus Brunner</string>
    <string name="web_link_klausbrunner"><a href="http://klaus.e175.net/">klaus.e175.net</a></string>


</resources>
